		Increased the shroud reveal range of Mobile Flak from 4 to 6.
		Increased the turret rotation speed of Mobile Flak from 5 to 10.
		Increased the hitpoints of Mobile Flak from 120 to 150.
		Fixed Tanya being unavailable after using the Chronosphere on a vehicle she is in.
		Tanya can now plant C4 on vehicles.
		Decreased the cost of Mobile Radar Jammer from 1000 to 800.
		Parachute bomb air strike will reveal the whole target area.
		Adjusted AA Guns to fire their guns alternately at a high fire rate, and added contrails to their bullets.
		Decreased AA Gun ZSU-23 damage from 25 to 12.
		Increased SAM Site power cost from -20 to -40.
		Decreased SAM Site Nike damage from 100 to 50.
		Increased Radar Dome cost from 1600 to 1800.
		Added a snow variation of the Allied Barracks by Kilkakon.
		Added a desert variation of the Allied Barracks by Kilkakon.
		Added a desert variation of the Missile Silo by Kilkakon.
		Removed the temperate shellmap and improved the design and performance of the desert shellmap.
		Removed the hardcoded missions. These will be later reimplemented.
		Removed maps: Battle Lake, Crossing the River, Doughnut Hole, Ice Woods, Island Hoppers (KOTH), Mad Scramble, Nishnekolymsk, Strip Mine, Free Coasts
		Fixed spies staying on the minimap after infiltration.
		Added maps: Blitzkrieg and Burlesca by s1w.
		Both Allied and Soviet factions now build general-purpose mines instead of AT and AP mines respectively.
		Added new attack-move cursor artwork.
		Added Phase Transport, an Allied high-tech infantry transport which can cloak.
		Attack Dogs, Snipers, Mobile Radar Jammers, Camo Pillboxes, Phase Transports, Radar Domes, and Spy Planes can now detect cloaked units.
		Removed the submarine detection ability from Cruiser and Transport.
		Added the submarine detection ability to Submarines and Missile Subs.
		Increased the submarine detection range of Gunboat from 3 to 4.