@@ -57,6 +57,9 @@ NEW:
 		Fixed Tanya being unavailable after using the Chronosphere on a vehicle she is in.
 		Tanya can now plant C4 on vehicles.
 		Decreased the cost of Mobile Radar Jammer from 1000 to 800.
+		Increased the hitpoints of Shock Trooper from 80 to 100.
+		Fixed Shock Trooper tooltip having the incorrect unit name.
+		Removed the TakeCover trait from Shock Trooper.
 		Parachute bomb air strike will reveal the whole target area.
 		Adjusted AA Guns to fire their guns alternately at a high fire rate, and added contrails to their bullets.
 		Decreased AA Gun ZSU-23 damage from 25 to 12.
